fix - fix horizontal scroll on home page

--- a/Frontend/ElProyecteGrandeFrontend/src/Pages/Home/Home.css
+++ b/Frontend/ElProyecteGrandeFrontend/src/Pages/Home/Home.css
@@ -23,5 +23,4 @@ img {
     justify-content: center;
     align-items: center;
     height: 200px;
-    width: 100vw;
 }
